--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <title>Hello World</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/all.css">
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="images/hello-icon-152.png">
@@ -17,7 +18,7 @@
 
   <body class="fullscreen">
     <div class="container">
-      <h1 class="title">Hello World!</h1>
+      <h1 class="title">Hello World! <i class="fas fa-rocket"></i></h1>
       <p>This is a test PWA</p>
     </div>
     <script src="js/main.js"></script>
