add .htaccess, edit paths

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Hello World</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.css">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="./manifest.json">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="images/hello-icon-152.png">
     <meta name="theme-color" content="white" />
@@ -21,6 +21,6 @@
       <h1 class="title">Hello World! <i class="fas fa-rocket"></i></h1>
       <p>This is a test PWA</p>
     </div>
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
