complete greetings task

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Hello World</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.css">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="./manifest.json">
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="images/hello-icon-152.png">
     <meta name="theme-color" content="white" />
@@ -20,8 +20,8 @@
     <div class="container">
       <h1 class="title">Hello World! <i class="fas fa-rocket"></i></h1>
       <p>This is a test PWA</p>
-       <form>
-        <input type="text" name="greeting" placeholder="type greeting">
+       <form id="form">
+        <input id="input" type="text" name="greeting" placeholder="type greeting">
         <button type="submit">Send</button>
       </form>
       <div class="greetings">
@@ -29,8 +29,8 @@
         <ul></ul>
       </div>
     </div>
-    <script src="js/fetchGQL.js"></script>
-    <script src="js/idb.js"></script>
-    <script src="js/main.js"></script>
+    <script src="./js/fetchGQL.js"></script>
+    <script src="./js/idb.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
